--- a/puzzle.html
+++ b/puzzle.html
@@ -15,9 +15,9 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="puzzle.html">Puzzles</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="#about">Socials</a></li>
+                <li><a href="puzzle.html">Weekly Crossword</a></li>
+                <li><a href="index.html#contact">Membership</a></li>
             </ul>
         </nav>
         <main>
