Add price and date placeholder

--- a/home.html
+++ b/home.html
@@ -13,6 +13,10 @@
             <hr class="small">
             <h1>UoY Cross Soc</h1>
         </header>
+        <div id="priceAndDate">
+            <p>Free</p>
+            <p>Date today</p>
+        </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
