--- a/puzzle.html
+++ b/puzzle.html
@@ -9,57 +9,40 @@
 <body>
     <div class="container">
         <header>
-            <h1>Crossword Society</h1>
-            <p>Solving crosswords and other newspaper games</p>
+            <hr class="big">
+            <hr class="small">
+            <h1>UoY Cross Soc</h1>
         </header>
+        <div id="priceAndDate">
+            <p>Free</p>
+            <p id="datetime"></p>
+        </div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#about">Socials</a></li>
                 <li><a href="puzzle.html">Weekly Crossword</a></li>
-                <li><a href="index.html#contact">Membership</a></li>
+                <li><a href="#contact">Membership</a></li>
             </ul>
         </nav>
         <main>
-            <section id="puzzles">
-                <h2>Puzzles</h2>
-                <p>Explore our collection of crosswords and other puzzles. New puzzles are added weekly.</p>
+            <section id="cur-puzzle">
+                <h2>Weekly Crossword</h2>
+                <div class="crossword">
+                    <div class="row">
+                        <div class="cell empty"></div>
+                        <div class="cell"><input type="text" maxlength="1"></div>
+                        <div class="cell"><input type="text" maxlength="1"></div>
+                        <div class="cell"><input type="text" maxlength="1"></div>
+                        <div class="cell empty"></div>
+                    </div>
+                </div>
             </section>
-            <table class="crossword">
-                <tr>
-                    <td class="white1">1</td>
-                    <td>1</td>
-                    <td>1</td>
-                    <td>1</td>
-                    <td>1</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>2</td>
-                    <td>2</td>
-                    <td>2</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>3</td>
-                    <td>3</td>
-                    <td>3</td>
-                    <td>3</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>4</td>
-                    <td>4</td>
-                    <td>4</td>
-                    <td>4</td>
-                </tr>
-            </table>
         </main>
         <footer>
             <p>&copy; 2024 Crossword Society. All rights reserved.</p>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
